--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
+    "ably": "^2.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "node-fetch": "^3.2.6",
